Fixed Broken Styles on admin view

--- a/resources/assets/js/components/TablaSolicitudes/index.css
+++ b/resources/assets/js/components/TablaSolicitudes/index.css
@@ -172,21 +172,24 @@
 }
 
 .filter-group{
+    align-items: center;
     display: flex;
     gap: 1em;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.search-bar{
+.search-bar{ 
+    height: 100%;
     flex: 1;
 }
 
-.search-group{
+.search-group{ 
+    align-items: center;
     flex: 2;
     display: flex;
     gap: 1em;
-    height: fit-content;
+    height: 2.5em;
     flex-wrap: nowrap;
 }
 
